fix: fix wrapper height on mobile to Calendar

--- a/frontend/src/features/Calendar/CalendarView.css
+++ b/frontend/src/features/Calendar/CalendarView.css
@@ -384,7 +384,7 @@
 
 @media (max-width: 900px) {
   .cal-wrapper {
-    max-height: 40rem;
+    max-height: 30rem;
   }
     
 }
